--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ font-family: Arial, sans-serif;
         <section class="featured-products">
             <h2>Популярные товары</h2>
             <div class="product">
-                <img src="product1.jpg" alt="Товар 1">
-                <h3>Название товара 1</h3>
-                <p>Описание товара 1</p>
+                <img src="img.png" alt="Товар 1">
+                <h3>Джинсы wide Leg</h3>
+                <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, кто ценит свободу движений <a> и актуальные тренды. Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
                 <button>Купить</button>
             </div>
             <div class="product">
-                <img src="product2.jpg" alt="Товар 2">
+                <img src="img1.png" alt="Товар 2">
                 <h3>Название товара 2</h3>
                 <p>Описание товара 2</p>
                 <button>Купить</button>
@@ -41,4 +41,4 @@ font-family: Arial, sans-serif;
         </section>
     </main> 
     <footer>
-        <p>&copy; 2024 Billie Store </p>
+        <p>&copy; 2024. Billie Store. </p>
