--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@ font-family: Arial, sans-serif;
             </ul>
         </nav>
     </header>
-    
     <main>
         <section class="featured-products">
             <h2>Популярные товары</h2>
             <div class="product">
-                <img src="img.png" alt="Товар 1">
+                <img src="img.png" alt="Товар 1" width="300">
                 <h3>Джинсы wide Leg</h3>
                 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, кто ценит свободу движений <a> и актуальные тренды. Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
                 <button>Купить</button>
