--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-font-family: Arial, sans-serif;
-  margin: 0;
-  background-color: #f4f4f4;
-  color: #112;
     <header>
         <h1>Billie Store</h1>
         <nav>
@@ -27,7 +23,7 @@ font-family: Arial, sans-serif;
         <section class="featured-products">
             <h2>Популярные товары</h2>
             <div class="product">
-                <img src="img.png" alt="Товар 1">
+                <img src="img.png" alt="Товар 1" width="300">
                 <h3>Джинсы wide Leg</h3>
                 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, кто ценит свободу движений <a> и актуальные тренды. Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
                 <button>Купить</button>
