--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             </ul>
         </nav>
     </header>
+      <p><a href="1.png">Открыть файл в браузере</a>
+  <p><a href="1.png" download>Скачать файл</a>
     <main>
         <section class="featured-products">
             <h2>Популярные товары</h2>
