--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Billie Store</h1>
         <nav>
             <ul>
-                <li><a href="#">Женская одежда</a></li>
+                <button onclick="window.location.href='page.html'">Женская одежда</button>
                 <li><a href="#">Мужская одежда</a></li>
                 <li><a href="#">Аксессуары</a></li>
                 <li><a href="#">Распродажа</a></li>
