--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+font-family: Arial, sans-serif;
+  margin: 0;
+  background-color: #f4f4f4;
+  color: #112;
     <header>
         <h1>Billie Store</h1>
         <nav>
@@ -18,13 +22,12 @@
             </ul>
         </nav>
     </header>
-      <p><a href="1.png">Открыть файл в браузере</a>
-  <p><a href="1.png" download>Скачать файл</a>
+    
     <main>
         <section class="featured-products">
             <h2>Популярные товары</h2>
             <div class="product">
-                <img src="img.png" alt="Товар 1" width="300">
+                <img src="img.png" alt="Товар 1">
                 <h3>Джинсы wide Leg</h3>
                 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, кто ценит свободу движений <a> и актуальные тренды. Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
                 <button>Купить</button>
