--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
       </nav>
     </header>
 <main>
+<div class="container">
+  <img src="img1.png" style="width:100%;">
+<div class="centered">BILLIE STORE</div>
+</div>
 <section class="featured-products">
             <p>популярные товары</p>
             <div class="product">
                 <img src="img.png" alt="товар 1" width="300">
-                <h3>Джинсы wide Leg</h3>
+                <p>Джинсы wide Leg</p>
 <p><a href="1.png" download>Скачать файл</a></p>
                 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, кто ценит свободу движений <a> и актуальные тренды. Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
                 <button> купить </button>
