--- a/page3.html
+++ b/page3.html
@@ -1,98 +1,25 @@
-<html lang="en"> 
-<head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Billie Store</title> 
-<style> body { font-family: Arial, sans-serif; text-align: center; }
-    h1 {
-        color: #333;
-    }
-    h2 {
-        color: #555;
-    }
-    select {
-        padding: 5px;
-        margin: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    button {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    button:hover {
-        background-color: #0056b3;
-    }
-    #cart {
-        margin-top: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        padding: 10px;
-        max-width: 400px;
-        margin: 0 auto;
-    }
-    #cart-items {
-        list-style-type: none;
-        padding: 0;
-    }
-    #cart-items li {
-        margin-bottom: 5px;
-    }
-</style>
-</head> <body> <h1>Добро пожаловать в Billie Store!</h1>
-<h2>Здесь вы можете ознакомиться с ассортиментом одежды различных брендов:</h2>
+<html>
+<head> <html lang="en"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Магазин одежды</title>
+    <link rel="stylesheet" href='style.css'>
+</head>
+<body>
+<main>
+<h1> <div align="center">Ассортимент детской одежды различных брендов:</div></h1>
+    <section class="about-section">
+    <div class="item">
+<img src="dress1.png" width="250" height="350" alt="Платье 1">
+<p> <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/">Нарядное платье с перьями для девочек <br>
+2 999 ₽</a>
+</p>
+<div class="item">
+<img src="dress2.png" width="250" height="350" alt="Платье 2">
+<p> <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/">Платье из хлопкового шитья для девочек <br>
+2 699 ₽</a>
+</p>
+       </div></section>
 
-<h3>Tops:</h3>
-<select id="tops">
-    <option value="t-shirt">T-Shirt</option>
-    <option value="blouse">Blouse</option>
-    <option value="sweater">Sweater</option>
-</select>
-
-<h3>Bottoms:</h3>
-<select id="bottoms">
-    <option value="jeans">Jeans</option>
-    <option value="skirt">Skirt</option>
-    <option value="pants">Pants</option>
-</select>
-
-<h3>Outerwear:</h3>
-<select id="outerwear">
-    <option value="jacket">Jacket</option>
-    <option value="coat">Coat</option>
-    <option value="vest">Vest</option>
-</select>
-
-<h3>Accessories:</h3>
-<select id="accessories">
-    <option value="scarf">Scarf</option>
-    <option value="hat">Hat</option>
-    <option value="gloves">Gloves</option>
-</select>
-
-<button onclick="addToCart()">Add to Cart</button>
-
-<div id="cart">
-    <h2>Shopping Cart:</h2>
-    <ul id="cart-items">
-        <!-- Cart items will be displayed here -->
-    </ul>
-</div>
-
-<script>
-    function addToCart() {
-        const selectedTops = document.getElementById('tops').value;
-        const selectedBottoms = document.getElementById('bottoms').value;
-        const selectedOuterwear = document.getElementById('outerwear').value;
-        const selectedAccessories = document.getElementById('accessories').value;
-
-        const cartItems = document.getElementById('cart-items');
-        const newItem = document.createElement('li');
-        newItem.textContent = `Tops: ${selectedTops}, Bottoms: ${selectedBottoms}, Outerwear: ${selectedOuterwear}, Accessories: ${selectedAccessories}`;
-        cartItems.appendChild(newItem);
-    }
-</script>
-</body> </html>
+</body>
+</html>
