--- a/page3.html
+++ b/page3.html
@@ -2,15 +2,15 @@
 <head> <html lang="en"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Магазин одежды</title>
-    <link rel="stylesheet" href='style.css'>
+    <title>Billie Store</title>
+    <link rel="stylesheet" href='styles.css'>
 </head>
 <body>
 <main>
-<h1> <div align="center">Ассортимент детской одежды различных брендов:</div></h1>
+<h1> <div align="center"> Ассортимент детской одежды различных брендов:</div> </h1> 
     <section class="about-section">
     <div class="item">
-<img src="dress1.png" width="250" height="350" alt="Платье 1">
+<img src="dress1.png" class="button" width="250" height="350" alt="Платье 1">
 <p> <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/">Нарядное платье с перьями для девочек <br>
 2 999 ₽</a>
 </p>
@@ -20,6 +20,5 @@
 2 699 ₽</a>
 </p>
        </div></section>
-
 </body>
 </html>
