--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
       <nav>
         <u1>
 <p> BILLIE STORE </p>
-<a href="woman.html" class="button"> женская одежда </a>          
-       <a href="man.html" class="button"> мужская одежда </a>
-<a href="acss.html" class="button"> аксессуары </a>
-<a href="shoes.html" class="button"> обувь </a>
+<a href="page1.html" class="button"> женская одежда </a>          
+<a href="page2.html" class="button"> мужская одежда </a>
+<a href="page3.html" class="button"> детская одежда </a>
+<a href="page4.html" class="button"> аксессуары </a>
+<a href="page5.html" class="button"> обувь </a>
         </u1>
         <u2>
-<a href="profile.html" class="button"> профиль </a>
-          <a href="contacts.html" class="button"> контакты </a>
-          <a href="settings.html" class="button"> настройки </a>
+<a href="page6.html" class="button"> контакты </a>
+<a href="page7.html" class="button"> профиль </a>
+<a href="page8.html" class="button"> настройки </a>
         </u2>
       </nav>
     </header>
@@ -25,16 +26,14 @@
   <img src="img1.png" style="width:100%;">
 <div class="centered">BILLIE STORE</div>
 </div>
-<section class="featured-products">
-            <p>популярные товары</p>
-            <div class="product">
-                <img src="img.png" alt="товар 1" width="300">
-                <p>Джинсы wide Leg</p>
-<p><a href="1.png" download>Скачать файл</a></p>
-                <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, кто ценит свободу движений <a> и актуальные тренды. Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
-                <button> купить </button>
-            </div>
-<p><a href="1.png" download>Скачать файл</a></p>
+<hr width="30%" align="center" size="4" color="black">
+<p align="center"> <font size="6"> популярные товары </font></p>
+<hr width="30%" align="center" size="4" color="black">
+<div class="featured-products">
+<img src="img.png" alt="товар 1" width="400" heigh="700">
+<p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, <br> кто ценит свободу движений <a> и актуальные тренды. <br> Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
+<button> купить </button>
+</div>
 </main>
   </body>
 </html>
