--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,8 @@
     <div class="item">
 <img src="dress1.png" class="button" width="250" height="350" alt="Платье 1">
 <p> <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/">Нарядное платье с перьями для девочек <br>
-2 999 ₽</a>
+2 999 ₽</a> <div style="display: flex; align-items: center;"> 
+<p style="margin-left: 20px;">text</p> </div>
 </p>
 <div class="item">
 <img src="dress2.png" width="250" height="350" alt="Платье 2">
