--- a/page1.html
+++ b/page1.html
@@ -7,17 +7,28 @@
     <header>
       <nav>
         <u1>
-<p><a href="index.html" class="button"> BILLIE STORE </p></a>  
+<p> BILLIE STORE </p>
 <a href="page1.html" class="button"> женская одежда </a>          
-       <a href="page2.html" class="button"> мужская одежда </a>
-          <a href="page3.html" class="button"> детская одежда </a>
+<a href="page2.html" class="button"> мужская одежда </a>
+<a href="page3.html" class="button"> детская одежда </a>
 <a href="page4.html" class="button"> аксессуары </a>
 <a href="page5.html" class="button"> обувь </a>
         </u1>
         <u2>
+<a href="page6.html" class="button"> контакты </a>
 <a href="page7.html" class="button"> профиль </a>
-          <a href="page6.html" class="button"> контакты </a>
-          <a href="spage8.html" class="button"> настройки </a>
+<a href="page8.html" class="button"> настройки </a>
         </u2>
       </nav>
     </header>
+<main>
+<div class="container">
+  <img src="img1.png" style="width:100%;">
+<div class="centered">BILLIE STORE</div>
+</div>
+<hr width="30%" align="center" size="4" color="black">
+<p align="center"> <font size="6"> популярные товары </font></p>
+<hr width="30%" align="center" size="4" color="black">
+<div class="featured-products">
+<img src="img.png" alt="товар 1" width="400" heigh="700">
+  
