--- a/page3.html
+++ b/page3.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 <main>
-<h1> <div align="center"> Ассортимент детской одежды различных брендов:</div> </h1> 
-    <section class="about-section">
-    <div class="item">
-<img src="dress1.png" class="button" width="250" height="350" alt="Платье 1">
-<p> <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/">Нарядное платье с перьями для девочек <br>
-2 999 ₽</a> <div style="display: flex; align-items: center;"> 
-<p style="margin-left: 20px;">text</p> </div>
-</p>
-<div class="item">
+<h1> <div align="center">Детская одежда</div>
+</h1>
+<section class="about-section">
+<div class="featured-products-1">
+<img src="dress1.png" width="250" height="350" alt="Платье 1">
+<p>Это великолепное нарядное платье для девочек украшено мягкими перьями, которые придают ему нежность и изысканность.</p>
+<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/" class="button"> купить </a> 
+</div>
+<div class="featured-products-2">
 <img src="dress2.png" width="250" height="350" alt="Платье 2">
-<p> <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/">Платье из хлопкового шитья для девочек <br>
-2 699 ₽</a>
-</p>
-       </div></section>
+<p>Платье из хлопкового шитья - стильное и удобное платье, выполненное из натурального материала. Оно отлично подойдет для повседневной носки или для особых случаев. </p>
+<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/" class="button"> купить </a>
+       </div>
+</section>
 </body>
 </html>
