--- a/page1.html
+++ b/page1.html
@@ -27,7 +27,7 @@
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr width="30%" align="center" size="4" color="black">
-<p align="center"> <font size="6"> популярные товары </font></p>
+<p align="center"> <font size="6"> Платья </font></p>
 <hr width="30%" align="center" size="4" color="black">
 <div class="featured-products">
 <img src="img.png" alt="товар 1" width="400" heigh="700">
