--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <u1>
-<p> BILLIE STORE </p>
+<p>BILLIE STORE</p>
 <a href="page1.html" class="button"> женская одежда </a>          
 <a href="page2.html" class="button"> мужская одежда </a>
 <a href="page3.html" class="button"> детская одежда </a>
@@ -28,9 +28,9 @@
 </h1>
 <section class="about-section">
 <div class="featured-products-1">
-<img src="dress1.png" width="250" height="350" alt="Платье 1">
+<img src="dress1.png" alt="Платье 1" width="250" height="350">
 <p>Это великолепное нарядное платье для девочек украшено мягкими перьями, которые придают ему нежность и изысканность.</p>
-<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/" class="button"> купить </a> 
+<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/" class="button"> купить </a>
 </div>
 <div class="featured-products-2">
 <img src="dress2.png" width="250" height="350" alt="Платье 2">
