--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Billie Store </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="page1.css">
   </head>
   <body>
     <header>
