--- a/page3.html
+++ b/page3.html
@@ -24,19 +24,22 @@
       </nav>
     </header>
 <main>
+<hr width="30%" align="center" size="4" color="black">
 <h1> <div align="center">Детская одежда</div>
+<hr width="30%" align="center" size="4" color="black">
 </h1>
 <section class="about-section">
 <div class="featured-products-1">
-<img src="dress1.png" alt="Платье 1" width="250" height="350">
-<p>Это великолепное нарядное платье для девочек украшено мягкими перьями, которые придают ему нежность и изысканность.</p>
-<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/" class="button"> купить </a>
+<img src="dress1.png" alt="Платье 1" width="350" heigh="600">
+<p>Это великолепное нарядное платье для девочек <br> украшено мягкими перьями, которые придают ему нежность и изысканность.</p> 
+<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/" style="margin-left: 20px;" class="button"> купить </a>
 </div>
 <div class="featured-products-2">
-<img src="dress2.png" width="250" height="350" alt="Платье 2">
+<img src="dress2.png" alt="Платье 2" width="350" heigh="600">
 <p>Платье из хлопкового шитья - стильное и удобное платье, выполненное из натурального материала. Оно отлично подойдет для повседневной носки или для особых случаев. </p>
-<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/" class="button"> купить </a>
+<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/"  style="margin-left: 20px;" class="button"> купить </a>
        </div>
-</section>
+</section> 
+<footer> <p>&copy; 2024 Billie Store </p> </footer>
 </body>
 </html>
