--- a/page3.html
+++ b/page3.html
@@ -40,6 +40,6 @@
 <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/"  style="margin-left: 20px;" class="button"> купить </a>
        </div>
 </section> 
-<footer> <p>&copy; 2024 Billie Store </p> </footer>
+<footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </body>
 </html>
