--- a/page3.html
+++ b/page3.html
@@ -24,6 +24,10 @@
       </nav>
     </header>
 <main>
+    <div class="container">
+  <img src="img1.png" style="width:100%;">
+<div class="centered">BILLIE STORE</div>
+</div>
 <hr width="30%" align="center" size="4" color="black">
 <h1> <div align="center">Детская одежда</div>
 <hr width="30%" align="center" size="4" color="black">
