--- a/page1.html
+++ b/page1.html
@@ -7,7 +7,7 @@
     <header>
       <nav>
         <u1>
-<p> BILLIE STORE </p>
+<p> BILLIE STORE </p>  
 <a href="page1.html" class="button"> женская одежда </a>          
 <a href="page2.html" class="button"> мужская одежда </a>
 <a href="page3.html" class="button"> детская одежда </a>
@@ -23,12 +23,45 @@
     </header>
 <main>
 <div class="container">
-  <img src="img1.png" style="width:100%;">
+  <img src="images/img1.png" style="width:100%;">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr width="30%" align="center" size="4" color="black">
-<p align="center"> <font size="6"> Платья </font></p>
+<p align="center"> <font size="6"> Женская одежда </font></p>
 <hr width="30%" align="center" size="4" color="black">
 <div class="featured-products">
-<img src="img.png" alt="товар 1" width="400" heigh="700">
-  
+<img src="images/dress.png.jpeg" alt="товар 1" width="400" heigh="700">
+  <p>Вискозное платье мини с вышивкой.<br>Вышивка, расположенная на платье, добавляет изысканности и роскоши этой модели. </p>
+<a href="https://zarina.ru/catalog/product/4225062562-50/" class="button"> купить </a>
+<div class="featured-products-4">
+<img src="images/dress3.png" alt="товар 2" width="400" heigh="700">
+<p>платье-комбинация миди атласное на бретельках.<br>Стильная и красивая модель, которая прекрасно освежит ваш образ, сделав его ярким и интересным.</p>
+<a href="https://befree.ru/zhenskaya/product/2421414118/60" class="button"> купить </a>
+<div class="featured-products-2">
+<img src="images/blouse.png.jpeg" alt="товар 3" width="400" heigh="700">
+<p>ОБЛЕГАЮЩАЯ ЛЕТНЯЯ БЛУЗКА С БАСКОЙ.<br>Современный дизайн и летние цвета делают эту блузку идеальным выбором для стильных и модных образов.</p>
+<a href="https://tvoe.ru/product/bluzka-top-goluboy-b3339/" class="button"> купить </a>
+
+<div class="featured-products-2">
+<img src="images/coat.png.jpeg" alt="товар 4" width="400" heigh="700">
+<p>Пальто с поясом.<br>Это элегантное пальто - прекрасное дополнение к вашему гардеробу!</p>
+<a href="https://ostin.com/product/palto-s-poyasom/30335080299?category-id=18341270299&availability=disabled&display=questions" class="button"> купить </a>
+
+<div class="featured-products-2">
+<img src="images/jeans.png" alt="товар 5" width="400" heigh="700">
+<p>Джинсы MOM.<br>Благодаря своему универсальному дизайну, эти джинсы станут основой вашего гардероба.</p>
+<a href="https://shopdaanna.ru/catalog/dlya_nee/dzhinsy554/1518584/" class="button"> купить </a>
+
+<div class="featured-products-2">
+<img src="images/jacet.png" alt="товар 6" width="400" heigh="700">
+<p>Укороченный жакет с крупными пуговицами.<br>Стильная модель верхней одежды, которая придает образу особый шарм.</p>
+<a href="https://lichi.com/ru/ru/product/44732" class="button"> купить </a>
+
+<div class="featured-products-2">
+<img src="images/bomber.png" alt="товар 7" width="400" heigh="700">
+<p>Фактурный бомбер.<br>Этот стильный элемент гардероба отлично сочетается со всем гардеробом, создавая ультрасовременный и стильный образ.</p>
+<a href="https://incity.ru/incity/odezhda/verkhnyaya_odezhda/1.1.1.24.01.13.01241%7C006037/" class="button"> купить </a>
+</section>
+<footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
+</body>
+</html>
