--- a/page8.html
+++ b/page8.html
@@ -21,5 +21,10 @@
         </u2>
       </nav>
     </header>
+  <main>
+<div class="container">
+  <img src="images/img1.png" style="width:100%;">
+<div class="centered">BILLIE STORE</div>
+</div>
 </body>
 </html>
