--- a/page8.html
+++ b/page8.html
@@ -21,10 +21,15 @@
         </u2>
       </nav>
     </header>
-  <main>
+<main>
 <div class="container">
   <img src="images/img1.png" style="width:100%;">
 <div class="centered">BILLIE STORE</div>
+</div>
+<hr width="30%" align="center" size="4" color="black">
+<p align="center"> <font size="6"> О нас </font></p>
+<hr width="30%" align="center" size="4" color="black">
+
 </div>
 </body>
 </html>
