--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Billie Store </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
   </head>
   <body>
     <header>
@@ -22,5 +22,10 @@
       </nav>
     </header>
     <main>
+      <hr width="30%" align="center" size="4" color="black">
+      <p align="center"> <font size="6"> мужская одежда </font></p>
+      <hr width="30%" align="center" size="4" color="black">
       
     </main>
+  </body>
+</html>
