--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
     </header>
 <main>
 <div class="container">
-  <img src="img1.png" style="width:100%;">
+  <img src="background.png" style="width:100%;">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr width="30%" align="center" size="4" color="black">
 <p align="center"> <font size="6"> популярные товары </font></p>
 <hr width="30%" align="center" size="4" color="black">
 <div class="featured-products">
-<img src="img.png" alt="товар 1" width="400" heigh="700">
+<img src="fp1.png" alt="товар 1" width="400" heigh="700">
 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, <br> кто ценит свободу движений <a> и актуальные тренды. <br> Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
 <a href="https://befree.ru/zhenskaya/product/2421209119/110" class="button"> купить </a>
 </div>
 <div class="featured-products-2">
-<img src="img2.png" alt="товар 2" width="400" heigh="700">
+<img src="fp2.png" alt="товар 2" width="400" heigh="700">
 <p>Атласные платья – это стильные и красивые модели, которые прекрасно освежают образ, делают его ярким и интересным.</p>
 <a href="https://befree.ru/zhenskaya/product/2421414118/60" class="button"> купить </a>
 </div>
 <div class="featured-products-3">
-<img src="img3.png" alt="товар 3" width="400" heigh="700">
+<img src="fp3.png" alt="товар 3" width="400" heigh="700">
 <p>сумочки через плечо удовлетворят запросы любой женщины. форма и размеры такой сумочки были заложены Коко Шанель и современные производителю поддерживают их «классический вид».</p>
 <a href="https://www.zara.com/us/en/ruched-shoulder-bag-p16588310.html?v1=329636456&v2=2353495" class="button"> купить </a>
 </div>
 <div class="featured-products-4">
-<img src="img4.png" alt="товар 4" width="400" heigh="700">
+<img src="fp4.png" alt="товар 4" width="400" heigh="700">
 <p>Поло — вид одежды, совмещающий в себе лучшие черты спорта и классики. По покрою и комфорту этот предмет гардероба ближе всего к футболке, но благодаря воротнику, пуговицам он вполне уместен в офисе</p>
 <a href="https://www.zara.com/us/en/textured-knit-polo-p03332425.html?v1=349752461&v2=2351616" class="button"> купить </a>
 </div>
