--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <header>
       <nav>
         <u1>
-<p> BILLIE STORE </p>
+<a href="index.html" class="button"> billie store </a>
 <a href="page1.html" class="button"> женская одежда </a>          
 <a href="page2.html" class="button"> мужская одежда </a>
 <a href="page3.html" class="button"> детская одежда </a>
@@ -25,7 +25,23 @@
       <hr width="30%" align="center" size="4" color="black">
       <p align="center"> <font size="6"> мужская одежда </font></p>
       <hr width="30%" align="center" size="4" color="black">
-      
+<div class="man1">
+<img src="man1.png" width="400" heigh="700">
+<img src="man1.2.png" width="400" heigh="700">
+<a href="https://www.maag-fashion.com/products-man/5001513401" class="button"> купить </a>
+</div>
+ДЖИНСЫ STRAIGHT FIT
+100% ХЛОПОК
+
+https://www.maag-fashion.com/products-man/5289268320
+ТОЛСТОВКА С КАПЮШОНОМ
+60% ПОЛИЭСТЕР, 40% ХЛОПОК
+
+https://www.maag-fashion.com/products-man/4703150800
+РУБАШКА EASY CARE
+60% ХЛОПОК, 40% ПОЛИЭСТЕР
+
+
     </main>
   </body>
 </html>
