--- a/page6.html
+++ b/page6.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="ru">
   <head>
     <title> Billie Store </title>
     <link rel="stylesheet" href="styles.css">
@@ -7,18 +7,18 @@
     <header>
       <nav>
         <u1>
-<p> BILLIE STORE </p>
-<a href="page1.html" class="button"> женская одежда </a>          
-<a href="page2.html" class="button"> мужская одежда </a>
-<a href="page3.html" class="button"> детская одежда </a>
-<a href="page4.html" class="button"> аксессуары </a>
-<a href="page5.html" class="button"> обувь </a>
+          <p> BILLIE STORE </p>
+          <a href="page1.html" class="button"> женская одежда </a>          
+          <a href="page2.html" class="button"> мужская одежда </a>
+          <a href="page3.html" class="button"> детская одежда </a>
+          <a href="page4.html" class="button"> аксессуары </a>
+          <a href="page5.html" class="button"> обувь </a>
         </u1>
         <u2>
-<a href="page6.html" class="button"> контакты </a>
-<a href="page7.html" class="button"> профиль </a>
-<a href="page8.html" class="button"> настройки </a>
-        </u2>
+          <a href="page6.html" class="button"> контакты </a>
+          <a href="page7.html" class="button"> профиль </a>
+          <a href="page8.html" class="button"> настройки </a>
+        </ul2>
       </nav>
     </header>
 <main>
@@ -29,6 +29,12 @@
 <hr width="30%" align="center" size="4" color="black">
 <p align="center"> <font size="6"> контакты </font></p>
 <hr width="30%" align="center" size="4" color="black">
+<div class="contact-info">
+  <p><strong>Telegram:</strong> @billiestore</p>
+  <p><strong>Телефон:</strong> +7 800 555 35 35</p>
+  <p><strong>Email:</strong> billiestore@gmail.com</p>
+</div>
+<footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </main>
   </body>
 </html>
