--- a/page3.html
+++ b/page3.html
@@ -40,7 +40,12 @@
 <div class="featured-products-2">
 <img src="dress2.png" alt="Платье 2" width="400" heigh="600">
 <p>Платье из хлопкового шитья - стильное и удобное платье, выполненное из натурального материала. Оно отлично подойдет для повседневной носки или для особых случаев. </p>
-<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/"  style="margin-left: 20px;" class="button"> купить </a>
+<a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/" class="button"> купить </a>
+       </div>
+    <div class="featured-products-3">
+<img src="pajamas3.png" alt="Пижама 3" width="400" heigh="600">
+<p>Пижама из мягкого хлопкового трикотажа - идеальный выбор для комфортного отдыха дома. Она станет отличным выбором для тех, кто ценит комфорт и качество материалов. </p>
+<a href="https://hmonline.ru/products/1-01152941" class="button"> купить </a>
        </div>
 </section> 
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
