--- a/page6.html
+++ b/page6.html
@@ -17,7 +17,7 @@
         <u2>
           <a href="page6.html" class="button"> контакты </a>
           <a href="page7.html" class="button"> профиль </a>
-          <a href="page8.html" class="button"> настройки </a>
+          <a href="page8.html" class="button"> о нас </a>
         </ul2>
       </nav>
     </header>
