--- a/page2.html
+++ b/page2.html
@@ -25,23 +25,27 @@
       <hr width="30%" align="center" size="4" color="black">
       <p align="center"> <font size="6"> мужская одежда </font></p>
       <hr width="30%" align="center" size="4" color="black">
-<div class="man1">
+<div class="man-1">
 <img src="man1.png" width="400" heigh="700">
 <img src="man1.2.png" width="400" heigh="700">
 <a href="https://www.maag-fashion.com/products-man/5001513401" class="button"> купить </a>
+<p> <font size="4">ДЖИНСЫ STRAIGHT FIT<br>100% ХЛОПОК 
+<br>Straight — это брюки, имеющие одинаковую ширину по всей длине штанины. <br> Нельзя однозначно охарактеризовать такие штаны, как узкие или широкие. Они могут быть и узкими, и широкими, <br>но главное — постоянный диаметр на уровне колена и на нижнем срезе штанины. </font> </p>
 </div>
-ДЖИНСЫ STRAIGHT FIT
-100% ХЛОПОК
-
-https://www.maag-fashion.com/products-man/5289268320
-ТОЛСТОВКА С КАПЮШОНОМ
-60% ПОЛИЭСТЕР, 40% ХЛОПОК
-
-https://www.maag-fashion.com/products-man/4703150800
-РУБАШКА EASY CARE
-60% ХЛОПОК, 40% ПОЛИЭСТЕР
-
-
+<div class="man-2">
+<img src="man2.png" width="400" heigh="700">
+<img src="man2.2.png" width="400" heigh="700">
+<a href="https://www.maag-fashion.com/products-man/5289268320" class="button"> купить </a>
+<p> <font size="4">ТОЛСТОВКА С КАПЮШОНОМ<br>60% ПОЛИЭСТЕР, 40% ХЛОПОК 
+<br>стильный и суперудобный оверсайз-джемпер с капюшоном и начесом <br>из базовой коллекции для расслабленных повседневных луков на каждый день.</font> </p>
+</div>
+<div class="man-3">
+<img src="man3.png" width="400" heigh="700">
+<img src="man3.2.png" width="400" heigh="700">
+<a href="https://www.maag-fashion.com/products-man/4703150800" class="button"> купить </a>
+<p> <font size="4">РУБАШКА EASY CARE<br>60% ХЛОПОК, 40% ПОЛИЭСТЕР 
+<br>Чёрная мужская рубашка — это часть базового гардероба, поэтому её несложно сочетать с классическими брюками, <br> джинсами, карго, джоггерами и даже шортами.</font> </p>
+</div>
     </main>
   </body>
 </html>
