--- a/page3.html
+++ b/page3.html
@@ -43,9 +43,19 @@
 <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/" class="button"> купить </a>
        </div>
     <div class="featured-products-3">
-<img src="pajamas3.png" alt="Пижама 3" width="400" heigh="600">
+<img src="pajamas3.png" alt="Пижама 1" width="400" heigh="600">
 <p>Пижама из мягкого хлопкового трикотажа - идеальный выбор для комфортного отдыха дома. Она станет отличным выбором для тех, кто ценит комфорт и качество материалов. </p>
 <a href="https://hmonline.ru/products/1-01152941" class="button"> купить </a>
+       </div>
+    <div class="featured-products-3">
+<img src="jeans.png" alt="Джинсы 1" width="400" heigh="600">
+<p>Это стильные и удобные джинсы, выполненные из высококачественного денима. Принт на джинсах добавляет им оригинальности и стильности. </p>
+<a href="https://www.gloria-jeans.ru/product/GJN031513-1/Dzinsy-Long-leg-Paperbag-s-printom-dla-devocki" class="button"> купить </a>
+       </div>
+    <div class="featured-products-4">
+<img src="shirt.png" alt="Рубашка 1" width="400" heigh="600">
+<p>Рубашка имеет свободный крой, что обеспечивает максимальный комфорт и свободу движений. Принт на рубашке добавляет ей яркости и оригинальности, делая ее привлекательной для маленьких модников.</p>
+<a href="https://www.gloria-jeans.ru/product/BWT001509-1/Molocnaa-svobodnaa-rubaska-s-printom-dla-malcika" class="button"> купить </a>
        </div>
 </section> 
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
