--- a/page3.html
+++ b/page3.html
@@ -43,7 +43,7 @@
 <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/" class="button"> купить </a>
        </div>
     <div class="featured-products-3">
-<img src="pajamas3.png" alt="Пижама 1" width="400" heigh="600">
+<img src="pajamas.png" alt="Пижама 1" width="400" heigh="600">
 <p>Пижама из мягкого хлопкового трикотажа - идеальный выбор для комфортного отдыха дома. Она станет отличным выбором для тех, кто ценит комфорт и качество материалов. </p>
 <a href="https://hmonline.ru/products/1-01152941" class="button"> купить </a>
        </div>
