--- a/page3.html
+++ b/page3.html
@@ -57,6 +57,11 @@
 <p>Рубашка имеет свободный крой, что обеспечивает максимальный комфорт и свободу движений. Принт на рубашке добавляет ей яркости и оригинальности, делая ее привлекательной для маленьких модников.</p>
 <a href="https://www.gloria-jeans.ru/product/BWT001509-1/Molocnaa-svobodnaa-rubaska-s-printom-dla-malcika" class="button"> купить </a>
        </div>
+    <div class="featured-products-3">
+<img src="trousers.png" alt="Брюки 1" width="400" heigh="600">
+<p>Дизайн моделей Demix сочетает в себе функциональность и стиль, что делает их отличным выбором для любого случая.</p>
+<a href="https://www.sportmaster.ru/product/25488250299/" class="button"> купить </a>
+       </div>
 </section> 
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </body>
