--- a/page8.html
+++ b/page8.html
@@ -1,7 +1,7 @@
-</html>
+<html>
 <head>
   <TITLE>Billie Store</TITLE>
-  <link rel="stylesheet" href="page8.css">
+  <link rel="stylesheet" href="page1.css">
 </head>
 <body>
   <header>
@@ -29,7 +29,9 @@
 <hr width="30%" align="center" size="4" color="black">
 <p align="center"> <font size="6"> О нас </font></p>
 <hr width="30%" align="center" size="4" color="black">
-
+<p align="center" size="7" color="black">Онлайн платформа для тех, кто ищет стильные бренды на любой вкус и кошелек. На нашем сайте можно
+найти красивую и стильную одежду не только для взрослых, но и для маленьких непосед! Вашему вниманию также представлены популярные бренды обуви и аксессуаров.
+Кроме того, у нашего сайта очень удобный интерфейс, который облегчит ваши поиска и позволит провести шопинг с удоволствие! Все модные бренды в одном месте!
+Приобретайте красивые и стильные вещи легко и без лишних хлопот. </p>
 </div>
-</body>
 </html>
