--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <p>Поло — вид одежды, совмещающий в себе лучшие черты спорта и классики. По покрою и комфорту этот предмет гардероба ближе всего к футболке, но благодаря воротнику, пуговицам он вполне уместен в офисе</p>
 <a href="https://www.zara.com/us/en/textured-knit-polo-p03332425.html?v1=349752461&v2=2351616" class="button"> купить </a>
 </div>
+  <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </main>
   </body>
 </html>
