--- a/page2.html
+++ b/page2.html
@@ -46,6 +46,7 @@
 <p> <font size="4">РУБАШКА EASY CARE<br>60% ХЛОПОК, 40% ПОЛИЭСТЕР 
 <br>Чёрная мужская рубашка — это часть базового гардероба, поэтому её несложно сочетать с классическими брюками, <br> джинсами, карго, джоггерами и даже шортами.</font> </p>
 </div>
+      <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
     </main>
   </body>
 </html>
