--- a/page7.html
+++ b/page7.html
@@ -102,6 +102,11 @@ position: absolute;
 z-index: 3;
 margin-top: 20%;
 }
+      footer {background-color: #333;
+color: #fff;text-align: center;
+padding: 10px 0;position: absolute;
+bottom: 0;width: 100%;
+}
     </style>
     <header>
       <nav>
@@ -144,6 +149,7 @@ document.getElementById("loginForm").addEventListener("submit", function(event) 
     document.getElementById("profileUsername").textContent = username;
 });
 </script>
+  <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>    
 </main>
   </body>
 </html>
