--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <u1>
-<p>BILLIE STORE</p>
+<a href="page1.html" class="button"> <BILLIE STORE </a>
 <a href="page1.html" class="button"> женская одежда </a>          
 <a href="page2.html" class="button"> мужская одежда </a>
 <a href="page3.html" class="button"> детская одежда </a>
