--- a/page5.html
+++ b/page5.html
@@ -31,8 +31,29 @@
 <hr width="30%" align="center" size="4" color="black">
   <h1> <div align="center">Обувь</div>
 <hr width="30%" align="center" size="4" color="black">
-<div align="center"> <a href="page9.html" class="button"> Мужская</div> </a>
-    <div align="center"> <a href="page10.html" class="button"> Женская</div> </a>
+<div class="featured-products-1">
+<img src="adidas.png" alt="Кроссовки 1" width="400" heigh="600">
+<p>Женские кроссовки Gazelle Bold от Adidas предлагают минималистичный и современный дизайн, который напоминает классические модели бренда.</p>
+<a href="https://street-beat.ru/d/krossovki-adidas-originals-hq6912/"> купить </a>
+       </div>
+      <div class="featured-products-2">
+<img src="adidas1.png" alt="Кроссовки 2" width="400" heigh="600">
+<p>Созданные на основе легендарной модели adidas, Niteball сочетают в себе ретро-дизайн и современные технологии, делая их универсальным выбором для повседневной жизни, тренировок и даже вечернего выхода.
+</p>
+<a href="https://street-beat.ru/d/krossovki-adidas-originals-ig6142/"> купить </a>
+       </div>
+         <div class="featured-products-3">
+<img src="nike.png" alt="Кроссовки 3" width="400" heigh="600">
+<p>Мужские кеды Nike AirForce 1 '07 LV8 - это не просто обувь, это легендарная классика, которая остаётся актуальной десятилетиями. Обновленная версия сохраняет все особенности оригинальной модели, добавляя при этом современные детали и улучшенные технологии.
+</p>
+<a href="https://urbanvibes.com/product/30996280299/"> купить </a>
+       </div>
+      div class="featured-products-4">
+<img src="nike1.png" alt="Кроссовки 4" width="400" heigh="600">
+<p>Shadow  выделяется  двойными  швами  и  двойными  логотипами  Nike  на  боковой  части  кед,  что  создает  эффект  слоистости  и  придает  им  необычный  вид.
+</p>
+<a href="https://urbanvibes.com/product/30898130299/"> купить </a>
+       </div>
 </h1>
 </section> 
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
