--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billie Store</title>
-    <link rel="stylesheet" href='styles2.css'>
+    <link rel="stylesheet" href='styles.css'>
 </head>
 <body>
     <header>
