--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 <main>
 <div class="container">
-  <img src="img2/img1.png" style="width:100%;">
+  <img src="img2/img1.png"  alt="background" style="width:100%;">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr width="30%" align="center" size="4" color="black">
