--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
-<p align="center"> <font size="6"> популярные товары </font></p>
+  <div class="name">
+<p>популярные товары </p>
+  </div>                   
 <hr>
 <div class="featured-products">
 <img src="img2/fp1.png" alt="товар 1" width="400" heigh="700">
