--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
-  <div class="name">
-<p>популярные товары </p>
-  </div>                   
+<p align="center"> <font size="6">популярные товары </font> </p>                
 <hr>
 <div class="featured-products">
 <img src="img2/fp1.png" alt="товар 1" width="400" heigh="700">
