--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="featured-products">
 <img 
   src="img2/fp1.png" alt="товар 1"
-  sizes="(max-width: 600px) 300px, (min-width: 600px) 600px">
+sizes="50vw">
 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, <br> кто ценит свободу движений <a> и актуальные тренды. <br> Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
 <a href="https://befree.ru/zhenskaya/product/2421209119/110" class="button"> купить </a>
 </div>
