--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 <hr>
 <div class="featured-products">
 <img 
-  src="img2/fp1.png" alt="товар 1"
-sizes=100px>
+  src="img2/fp1.png" alt="товар 1" width="400">
 <p>Джинсы Wide Leg – это стильный и комфортный выбор для тех, <br> кто ценит свободу движений <a> и актуальные тренды. <br> Их отличает свободный крой от бедра, который создает </a> эффект длинных и стройных ног.</p>
 <a href="https://befree.ru/zhenskaya/product/2421209119/110" class="button"> купить </a>
 </div>
