--- a/page2.html
+++ b/page2.html
@@ -8,18 +8,14 @@
 <body>
     <header>
       <nav>
-        <u1>
-<a href="index.html" class="button"> billie store </a>   
+<a href="index.html" class="button">BILLIE STORE</a>  
 <a href="page1.html" class="button"> женская одежда </a>          
 <a href="page2.html" class="button"> мужская одежда </a>
 <a href="page3.html" class="button"> детская одежда </a>
 <a href="page5.html" class="button"> обувь </a>
-        </u1>
-        <u2>
 <a href="page6.html" class="button"> контакты </a>
 <a href="page7.html" class="button"> профиль </a>
 <a href="page8.html" class="button"> о нас </a>
-        </u2>
       </nav>
     </header>
 <main>
