--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
     </header>
 <main>
 <div class="container">
-  <img src="images/img1.png" style="width:100%;">
+  <img src="images/img1.png" alt="background" style="width:100%;">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
