--- a/page1.html
+++ b/page1.html
@@ -28,34 +28,38 @@
 <img src="images/dress.png.jpeg" alt="товар 1" width="500">
   <p>Вискозное платье мини с вышивкой.<br>Вышивка, расположенная на платье, добавляет изысканности и роскоши этой модели. </p>
 <a href="https://zarina.ru/catalog/product/4225062562-50/" class="button"> купить </a>
+</div>
 <div class="featured-products-4">
 <img src="images/dress3.png" alt="товар 2" width="500">
 <p>платье-комбинация миди атласное на бретельках.<br>Стильная и красивая модель, которая прекрасно освежит ваш образ, сделав его ярким и интересным.</p>
 <a href="https://befree.ru/zhenskaya/product/2421414118/60" class="button"> купить </a>
+</div>
 <div class="featured-products-2">
 <img src="images/blouse.png.jpeg" alt="товар 3" width="500">
 <p>ОБЛЕГАЮЩАЯ ЛЕТНЯЯ БЛУЗКА С БАСКОЙ.<br>Современный дизайн и летние цвета делают эту блузку идеальным выбором для стильных и модных образов.</p>
 <a href="https://tvoe.ru/product/bluzka-top-goluboy-b3339/" class="button"> купить </a>
-
+</div>
 <div class="featured-products-2">
 <img src="images/coat.png.jpeg" alt="товар 4" width="500">
 <p>Пальто с поясом.<br>Это элегантное пальто - прекрасное дополнение к вашему гардеробу!</p>
 <a href="https://ostin.com/product/palto-s-poyasom/30335080299?category-id=18341270299&availability=disabled&display=questions" class="button"> купить </a>
-
+</div>
 <div class="featured-products-2">
 <img src="images/jeans.png" alt="товар 5" width="500">
 <p>Джинсы MOM.<br>Благодаря своему универсальному дизайну, эти джинсы станут основой вашего гардероба.</p>
 <a href="https://shopdaanna.ru/catalog/dlya_nee/dzhinsy554/1518584/" class="button"> купить </a>
-
+</div>
 <div class="featured-products-2">
 <img src="images/jacet.png" alt="товар 6" width="500">
 <p>Укороченный жакет с крупными пуговицами.<br>Стильная модель верхней одежды, которая придает образу особый шарм.</p>
 <a href="https://lichi.com/ru/ru/product/44732" class="button"> купить </a>
-
+</div>
 <div class="featured-products-2">
 <img src="images/bomber.png" alt="товар 7" width="500">
 <p>Фактурный бомбер.<br>Этот стильный элемент гардероба отлично сочетается со всем гардеробом, создавая ультрасовременный и стильный образ.</p>
 <a href="https://incity.ru/incity/odezhda/verkhnyaya_odezhda/1.1.1.24.01.13.01241%7C006037/" class="button"> купить </a>
+</div>
+</main>
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </body>
 </html>
