--- a/page2.html
+++ b/page2.html
@@ -20,29 +20,29 @@
     </header>
 <main>
     <div class="container">
-  <img src="img2/img1.png" style="width:100%;">
+  <img src="img2/img1.png" style="width:100%;" alt="background">
 <div class="centered">BILLIE STORE</div>
 </div>
      <hr>
       <p align="center"> <font size="6"> мужская одежда </font></p>
 <hr>
 <div class="man-1">
-<img src="img2/man1.png" width="400" heigh="700">
-<img src="img2/man1.2.png" width="400" heigh="700">
+<img src="img2/man1.png" width="500" alt="товар 1">
+<img src="img2/man1.2.png" width="500" alt="товар 1">
 <a href="https://www.maag-fashion.com/products-man/5001513401" class="button"> купить </a>
 <p> <font size="4">ДЖИНСЫ STRAIGHT FIT<br>100% ХЛОПОК 
 <br>Straight — это брюки, имеющие одинаковую ширину по всей длине штанины. <br> Нельзя однозначно охарактеризовать такие штаны, как узкие или широкие. Они могут быть и узкими, и широкими, <br>но главное — постоянный диаметр на уровне колена и на нижнем срезе штанины. </font> </p>
 </div>
 <div class="man-2">
-<img src="img2/man2.png" width="400" heigh="700">
-<img src="img2/man2.2.png" width="400" heigh="700">
+<img src="img2/man2.png" width="500" alt="товар 2">
+<img src="img2/man2.2.png" width="500" alt="товар 2">
 <a href="https://www.maag-fashion.com/products-man/5289268320" class="button"> купить </a>
 <p> <font size="4">ТОЛСТОВКА С КАПЮШОНОМ<br>60% ПОЛИЭСТЕР, 40% ХЛОПОК 
 <br>стильный и суперудобный оверсайз-джемпер с капюшоном и начесом <br>из базовой коллекции для расслабленных повседневных луков на каждый день.</font> </p>
 </div>
 <div class="man-3">
-<img src="img2/man3.png" width="400" heigh="700">
-<img src="img2/man3.2.png" width="400" heigh="700">
+<img src="img2/man3.png" width="500" alt="товар 3">
+<img src="img2/man3.2.png" width="500" alt="товар 3">
 <a href="https://www.maag-fashion.com/products-man/4703150800" class="button"> купить </a>
 <p> <font size="4">РУБАШКА EASY CARE<br>60% ХЛОПОК, 40% ПОЛИЭСТЕР 
 <br>Чёрная мужская рубашка — это часть базового гардероба, поэтому её несложно сочетать с классическими брюками, <br> джинсами, карго, джоггерами и даже шортами.</font> </p>
