--- a/page3.html
+++ b/page3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head> <html lang="en"> 
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billie Store</title>
@@ -20,7 +20,7 @@
     </header>
 <main>
     <div class="container">
-  <img src="img3/img1.png" style="width:100%;">
+  <img src="img3/img1.png" style="width:100%;" alt="background">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
@@ -28,32 +28,32 @@
 <hr>
 </h1>
 <div class="featured-products">
-<img src="img3/dress1.png" alt="товар 1" width="400" heigh="600">
+<img src="img3/dress1.png" alt="товар 1" width="500">
 <p>Это великолепное нарядное платье для девочек <br> украшено мягкими перьями, которые придают ему нежность и изысканность.</p>
 <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040735_297/" class="button"> купить </a> </div>
 </div>
 <div class="featured-products-2">
-<img src="img3/dress2.png" alt="Платье 2" width="400" heigh="600">
+<img src="img3/dress2.png" alt="Платье 2" width="500">
 <p>Платье из хлопкового шитья - стильное и удобное платье, выполненное из натурального материала. Оно отлично подойдет для повседневной носки или для особых случаев. </p>
 <a href="https://www.sela.ru/eshop/kids/girl/platya-i-sarafany/4805040724_1/" class="button"> купить </a>
        </div>
     <div class="featured-products-3">
-<img src="img3/pajamas.png" alt="Пижама 1" width="400" heigh="600">
+<img src="img3/pajamas.png" alt="Пижама 1" width="500">
 <p>Пижама из мягкого хлопкового трикотажа - идеальный выбор для комфортного отдыха дома. Она станет отличным выбором для тех, кто ценит комфорт и качество материалов. </p>
 <a href="https://hmonline.ru/products/1-01152941" class="button"> купить </a>
        </div>
     <div class="featured-products-3">
-<img src="img3/jeans.png" alt="Джинсы 1" width="400" heigh="600">
+<img src="img3/jeans.png" alt="Джинсы 1" width="500">
 <p>Это стильные и удобные джинсы, выполненные из высококачественного денима. Принт на джинсах добавляет им оригинальности и стильности. </p>
 <a href="https://www.gloria-jeans.ru/product/GJN031513-1/Dzinsy-Long-leg-Paperbag-s-printom-dla-devocki" class="button"> купить </a>
        </div>
     <div class="featured-products-4">
-<img src="img3/shirt.png" alt="Рубашка 1" width="400" heigh="600">
+<img src="img3/shirt.png" alt="Рубашка 1" width="500">
 <p>Рубашка имеет свободный крой, что обеспечивает максимальный комфорт и свободу движений. Принт на рубашке добавляет ей яркости и оригинальности, делая ее привлекательной для маленьких модников.</p>
 <a href="https://www.gloria-jeans.ru/product/BWT001509-1/Molocnaa-svobodnaa-rubaska-s-printom-dla-malcika" class="button"> купить </a>
        </div>
     <div class="featured-products-3">
-<img src="img3/trousers.png" alt="Брюки 1" width="400" heigh="600">
+<img src="img3/trousers.png" alt="Брюки 1" width="500">
 <p>Дизайн моделей Demix сочетает в себе функциональность и стиль, что делает их отличным выбором для любого случая.</p>
 <a href="https://www.sportmaster.ru/product/25488250299/" class="button"> купить </a>
        </div>
