--- a/page3.html
+++ b/page3.html
@@ -24,9 +24,8 @@
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
-<h1> <div align="center">Детская одежда</div>
+<div align="center">Детская одежда</div>
 <hr>
-</h1>
 <div class="featured-products">
 <img src="img3/dress1.png" alt="товар 1" width="500">
 <p>Это великолепное нарядное платье для девочек <br> украшено мягкими перьями, которые придают ему нежность и изысканность.</p>
@@ -57,7 +56,7 @@
 <p>Дизайн моделей Demix сочетает в себе функциональность и стиль, что делает их отличным выбором для любого случая.</p>
 <a href="https://www.sportmaster.ru/product/25488250299/" class="button"> купить </a>
        </div>
-</section> 
+</main>
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </body>
 </html>
