--- a/page5.html
+++ b/page5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head> <html lang="en"> 
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billie Store</title>
@@ -20,37 +20,36 @@
     </header>
 <main>
     <div class="container">
-  <img src="img3/img1.png" style="width:100%;">
+  <img src="img3/img1.png" style="width:100%;" alt="backround">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
-  <h1> <div align="center">Обувь</div>
+ <div align="center">Обувь</div>
 <hr>
 <div class="featured-products-1">
-<img src="img3/adidas.png" alt="Кроссовки 1" width="400" heigh="600">
+<img src="img3/adidas.png" alt="Кроссовки 1" width="500">
 <p>Женские кроссовки Gazelle Bold от Adidas предлагают минималистичный и современный дизайн, который напоминает классические модели бренда.</p>
 <a href="https://street-beat.ru/d/krossovki-adidas-originals-hq6912/"> купить </a>
        </div>
       <div class="featured-products-2">
-<img src="img3/adidas1.png" alt="Кроссовки 2" width="400" heigh="600">
+<img src="img3/adidas1.png" alt="Кроссовки 2" width="500">
 <p>Созданные на основе легендарной модели adidas, Niteball сочетают в себе ретро-дизайн и современные технологии, делая их универсальным выбором для повседневной жизни, тренировок и даже вечернего выхода.
 </p>
 <a href="https://street-beat.ru/d/krossovki-adidas-originals-ig6142/"> купить </a>
        </div>
          <div class="featured-products-3">
-<img src="img3/nike.png" alt="Кроссовки 3" width="400" heigh="600">
+<img src="img3/nike.png" alt="Кроссовки 3" width="500">
 <p>Мужские кеды Nike AirForce 1 '07 LV8 - это не просто обувь, это легендарная классика, которая остаётся актуальной десятилетиями. Обновленная версия сохраняет все особенности оригинальной модели, добавляя при этом современные детали и улучшенные технологии.
 </p>
 <a href="https://urbanvibes.com/product/30996280299/"> купить </a>
        </div>
       <div class="featured-products-3">
-<img src="img3/nike1.png" alt="Кроссовки 4" width="400" heigh="600">
+<img src="img3/nike1.png" alt="Кроссовки 4" width="500">
 <p>Shadow  выделяется  двойными  швами  и  двойными  логотипами  Nike  на  боковой  части  кед,  что  создает  эффект  слоистости  и  придает  им  необычный  вид.
 </p>
 <a href="https://urbanvibes.com/product/30898130299/"> купить </a>
        </div>
-</h1>
-</section> 
+</main>
 <footer> <p>&copy; 2024 Billie Store. All rights reserved. </p> </footer>
 </body>
 </html>
