--- a/page6.html
+++ b/page6.html
@@ -18,7 +18,7 @@
     </header>
 <main>
   <div class="container">
-  <img src="img3/img1.png" style="width:100%;">
+  <img src="img3/img1.png" style="width:100%;" alt="background">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
