--- a/page8.html
+++ b/page8.html
@@ -28,5 +28,6 @@
 найти красивую и стильную одежду не только для взрослых, но и для маленьких непосед! Вашему вниманию также представлены популярные бренды обуви и аксессуаров.
 Кроме того, у нашего сайта очень удобный интерфейс, который облегчит ваши поиска и позволит провести шопинг с удоволствие! Все модные бренды в одном месте!
 Приобретайте красивые и стильные вещи легко и без лишних хлопот. </p>
+</main>
 </div>
 </html>
