--- a/page6.html
+++ b/page6.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <lang="ru">
+<!DOCTYPE html> 
   <head>
     <title> Billie Store </title>
     <link rel="stylesheet" href="styles.css">
