--- a/page8.html
+++ b/page8.html
@@ -18,7 +18,7 @@
     </header>
 <main>
 <div class="container">
-  <img src="images/img1.png" style="width:100%;">
+  <img src="images/img1.png" style="width:100%;" alt="background">
 <div class="centered">BILLIE STORE</div>
 </div>
 <hr>
