--- a/page8.html
+++ b/page8.html
@@ -24,9 +24,9 @@
 <hr>
 <p align="center"> <font size="6"> О нас </font></p>
 <hr>
-<p align="center" size="7" color="black">Онлайн платформа для тех, кто ищет стильные бренды на любой вкус и кошелек. На нашем сайте можно
+<p align="center" <font size="7"> Онлайн платформа для тех, кто ищет стильные бренды на любой вкус и кошелек. На нашем сайте можно
 найти красивую и стильную одежду не только для взрослых, но и для маленьких непосед! Вашему вниманию также представлены популярные бренды обуви и аксессуаров.
 Кроме того, у нашего сайта очень удобный интерфейс, который облегчит ваши поиска и позволит провести шопинг с удоволствие! Все модные бренды в одном месте!
-Приобретайте красивые и стильные вещи легко и без лишних хлопот. </p>
+Приобретайте красивые и стильные вещи легко и без лишних хлопот.</font></p>
 </main>
 </html>
